<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="fragment"
            type="com.osakturk.notetask.ui.note.EditAndCreateNoteFragment"/>

        <variable
            name="viewModel"
            type="com.osakturk.notetask.ui.note.VMEditAndCreateNote"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/createEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/editAndCreate"
            />

        <TextView
            android:id="@+id/title"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/createEditTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/titleCreate"
            />
        <EditText
            android:id="@+id/inputTitle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:inputType="text" />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/description"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/inputTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/description"
            />
        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:inputType="text" />

        <TextView
            android:id="@+id/imageUrl"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/inputDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/imageUrl"
            />
        <EditText
            android:id="@+id/inputImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageUrl"
            android:inputType="text" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/createEditTitle"
            android:background="@drawable/red_button"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/inputImageUrl"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:text="@string/save"
            app:layout_constraintStart_toEndOf="@id/deleteButton"
            app:layout_constraintTop_toTopOf="@id/deleteButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>